<resources>
    <string name="app_name">BloodDonation</string>
    <string name="search_text">Search Blood Donors</string>
    <string name="loc_search">Search Location Here</string>
    <string name="group_search">Search Blood Group</string>
    <string name="search">Search</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Not a member? Get registered  now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email_id">Email ID</string>
    <string name="name">Enter your complete name</string>
    <string name="loc">Your Location</string>


    <string name="bg_prompt">Choose a country</string>

    <string-array name="blood_groups">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
    <string-array name="donation">
        <item>Yes</item>
        <item>No</item>

    </string-array>
    <string name="donation_prompt">Do you want to donate blood?</string>


    <string name="gender_prompt">Choose your gender</string>
    <string name="req_name">Name</string>
    <string name="req_city">City Name</string>
    <string name="contact">Contact Number</string>
    <string name="req_hospital">Hospital Name</string>
    <string name="req_quanity">Amount of bottles required</string>
    <string name="req_msg">Any message</string>
    <string name="req_blood_head">Request For Blood</string>
    <string name="my_requests_head">My Requests</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_main_menu">main_menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Donate Life</string>
    <string name="nav_header_subtitle">flink334@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation__drawer">Navigation_Drawer</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_nav">nav</string>
    <string name="hint_number">Enter you contact number</string>
    <string name="action_logout">Log Out</string>
    <string name="search_donors">Blood Donors</string>
</resources>
