<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"

    tools:context=".sign_up"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"

        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:text="Blood Donation"
            android:textStyle="italic"/>



        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textColor="@android:color/white"
            />
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@android:color/white" />




        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_password"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@android:color/white"
            tools:ignore="InvalidImeActionId" />
        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_number"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@android:color/white"
            tools:ignore="InvalidImeActionId" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/edt_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/loc"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@android:color/white" />
                <Spinner
                    android:id="@+id/spn_blood_group"
                    android:layout_below="@+id/edt_location"
                    android:layout_width="match_parent"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:layout_height="wrap_content"
                    android:entries="@array/blood_groups"
                    android:prompt="@string/bg_prompt" />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:paddingHorizontal="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <Spinner
                    android:id="@+id/spn_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/gender"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:prompt="@string/gender_prompt" />
                <Spinner
                    android:id="@+id/spn_donor"
                    android:layout_below="@+id/spn_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:entries="@array/donation"
                    android:prompt="@string/donation_prompt" />

            </RelativeLayout>
        </LinearLayout>


        <Button
            android:id="@+id/sign_up_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttons"
            android:text="@string/action_sign_in_short"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <!--<Button-->
            <!--android:id="@+id/btn_reset_password"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="5dp"-->
            <!--android:background="@null"-->
            <!--android:text="@string/btn_forgot_password"-->
            <!--android:textAllCaps="false"-->
            <!--android:textColor="@color/colorAccent" />-->

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</LinearLayout>