<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white"
    tools:context=".blood_request">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/req_blood_head"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_gravity="center"
        android:textSize="25dp"
        android:textStyle="bold"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimaryDark"/>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:paddingVertical="3dp"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:layout_marginTop="10dp"
                android:hint="Name"/>
            <TextView
                android:layout_width="wrap_content"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginTop="10dp"
                android:hint="City Name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:layout_marginTop="10dp"
                android:hint="Hospital"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16dp"
                android:layout_marginTop="10dp"
                android:hint="Contact No"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16dp"
                android:layout_marginTop="10dp"
                android:hint="Request Date"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:layout_marginTop="10dp"
                android:hint="Blood Group"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16dp"
                android:layout_marginTop="10dp"
                android:hint="Quantity"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16dp"
                android:layout_marginTop="10dp"
                android:hint="Message"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="2">
            <EditText
                android:id="@+id/req_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:layout_marginTop="10dp"
                android:hint="@string/name"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/req_city"
                android:textSize="16dp"
                android:hint="@string/req_city"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:padding="5dp"

                android:layout_marginTop="10dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:id="@+id/req_hospital"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"

                android:hint="@string/req_hospital"

                android:layout_marginTop="10dp"/>
            <EditText
                android:id="@+id/req_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:hint="@string/contact"

                android:layout_marginTop="10dp"/>
            <EditText
                android:id="@+id/req_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"

                android:layout_marginTop="10dp"/>
            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/req_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:spinnerMode="dropdown"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:entries="@array/blood_groups"
                android:prompt="@string/bg_prompt"

                android:layout_marginTop="10dp"/>
            <EditText
                android:id="@+id/req_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:hint="@string/req_quanity"

                android:layout_marginTop="10dp"/>
            <EditText
                android:id="@+id/req_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:hint="@string/req_msg"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@drawable/buttons"
        android:id="@+id/btn_submit"
        android:text="Submit"
        android:textColor="@color/black"/>

</LinearLayout>