<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/app_bar_nav"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_text"
            android:textSize="32dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"
            android:gravity="center"/>
        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_search_location"
            android:hint="@string/loc_search"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
           android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:drawableLeft="@drawable/ic_location_search"
            android:drawableStart="@drawable/ic_location_search"
            android:textSize="25dp"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_search_group"
            android:hint="@string/group_search"
            android:padding="10dp"
            android:entries="@array/blood_groups"
            android:prompt="@string/bg_prompt"
            android:layout_marginBottom="20dp"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"

            android:drawableLeft="@drawable/ic_blood_group"
            android:drawableStart="@drawable/ic_blood_group"
            android:textSize="25dp"/>
        <Button
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:background="@drawable/buttons"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:paddingHorizontal="100dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_rate_us"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/buttonsdark"
                android:text="Rate Us"
                android:textColor="@color/white"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_share"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/buttonsdark"
                android:textColor="@color/white"
                android:text="Share"/>

        </LinearLayout>
        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:orientation="horizontal"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:layout_gravity="bottom"-->
            <!--android:gravity="center_horizontal"-->
            <!--android:layout_height="wrap_content">-->
            <!--<Button-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:background="@color/black"-->
                <!--android:textColor="@color/white"-->
                <!--android:layout_marginHorizontal="3dp"-->
                <!--android:paddingHorizontal="3dp"-->
                <!--android:textSize="12dp"-->
                <!--android:text="My Profile"-->
                <!--android:id="@+id/btn_profile"/>-->

            <!--<Button-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:background="@color/black"-->
                <!--android:textColor="@color/white"-->
                <!--android:textSize="12dp"-->
                <!--android:layout_marginHorizontal="3dp"-->
                <!--android:paddingHorizontal="3dp"-->
                <!--android:text="Contact Us"-->
                <!--android:id="@+id/btn_contact"/>-->
            <!--<Button-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Request Blood"-->
                <!--android:background="@color/black"-->
                <!--android:layout_marginHorizontal="3dp"-->
                <!--android:textColor="@color/white"-->
                <!--android:textSize="12dp"-->
                <!--android:paddingHorizontal="3dp"-->
                <!--android:id="@+id/btn_request_blood"/>-->

        <!--</LinearLayout>-->
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header_nav"
        app:menu="@menu/activity_nav_drawer" />
</android.support.v4.widget.DrawerLayout>
